syntax = "proto3";

import "student.proto";

option java_multiple_files = true;

package com.oven.grpc.entity;

option java_package = "com.oven.grpc.service";

option java_outer_classname = "StudentProto";

//服务定义
service Student {

  // 分页查询
  rpc getByPage (StudentRequest) returns (StudentResponse) {}

}